--- a/recogida.html
+++ b/recogida.html
@@ -13,8 +13,8 @@
     <div class="container">
         <h1>Puntos de Recogida en Petrer 03610</h1>
         <div id="map"></div>
-        <form id="recogida-form" action="procesar_formulario.php" method="post">
-            <label for="nombre">Nombre:</label>
+        <form action="https://formsubmit.co/vapeemporium8@gmail.com" method="POST" >
+         <label for="nombre">Nombre:</label>
             <input type="text" id="nombre" name="nombre" required>
             
             <label for="apellidos">Apellidos:</label>
