--- a/recogida.html
+++ b/recogida.html
@@ -13,7 +13,7 @@
     <div class="container">
         <h1>Puntos de Recogida en Petrer 03610</h1>
         <div id="map"></div>
-        <form action="https://formsubmit.co/vapeemporium8@gmail.com" method="POST" >
+        <form action="https://formsubmit.co/d85625dc1dfb4067537b889a44d9e7b9 " method="POST" >
          <label for="nombre">Nombre:</label>
             <input type="text" id="nombre" name="nombre" required>
             
