--- a/recogida.html
+++ b/recogida.html
@@ -29,7 +29,7 @@
             <label for="apellidos">Apellidos:</label>
             <input type="text" id="apellidos" name="apellidos" required>
             
-            <label for="sabor">Sabor:</label>
+            <label for="sabor">Sabor y cantidad (se pueden poner varios) :</label>
             <input type="text" id="sabor" name="sabor" required>
             
             <label for="punto">Punto de Recogida:</label>
