--- a/index.html.html
+++ b/index.html.html
@@ -7,12 +7,14 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div class="image-container"></div> <!-- Contenedor de la imagen de fondo -->
     <div class="container">
-        <h1></h1>
+        <h1>Bienvenido a nuestra tienda en línea</h1>
         <button onclick="location.href='catalogo.html'">Ver Catálogo</button>
         <button onclick="location.href='recogida.html'">Recogida</button>
         <button onclick="location.href='envio.html'">Envío</button>
     </div>
 </body>
 </html>
+
 
