--- a/index.html.html
+++ b/index.html.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
@@ -60,10 +59,11 @@
         <h1></h1>
         <button onclick="location.href='catalogo.html'">Ver Catálogo</button>
         <button onclick="location.href='recogida.html'">Recogida</button>
-        <button onclick="location.href='envio.html'">Envío</button>
+        <button onclick="location.href='https://www.instagram.com/direct/t/100973991548742?hl=es'">Envío</button>
     </div>
 </body>
 </html>
+
 
 
 
