--- a/index.html.html
+++ b/index.html.html
@@ -59,7 +59,7 @@
         <h1></h1>
         <button onclick="location.href='catalogo.html'">Ver Catálogo</button>
         <button onclick="location.href='recogida.html'">Recogida</button>
-        <button onclick="location.href='https://www.instagram.com/direct/t/100973991548742?hl=es'">Envío</button>
+        <button onclick="location.href='envio.html'">Envío</button>
     </div>
 </body>
 </html>
