--- a/recogida.html
+++ b/recogida.html
@@ -47,7 +47,7 @@
             <label for="telefono">Número de Teléfono:</label>
             <input type="tel" id="telefono" name="telefono" required pattern="[6789][0-9]{8}" title="Este numero de Telefono no existe">
             
-            <label for="cantidad">Cantidad:</label>
+            <label for="cantidad">Cantidad Total:</label>
             <input type="number" id="cantidad" name="cantidad" min="1" value="1" onchange="calcularPrecioTotal()">
             
             <!-- Agregamos un campo para el código de descuento -->
