--- a/recogida.html
+++ b/recogida.html
@@ -31,6 +31,8 @@
             
             <label for="sabor">Sabor y cantidad (se pueden poner varios) :</label>
             <input type="text" id="sabor" name="sabor" required>
+            <!-- Mensaje de advertencia -->
+            <p style="color: red; font-style: italic;">Asegúrate de verificar el stock en el <a href="catalogo.html">catálogo</a> antes de hacer tu pedido.</p>
             
             <label for="punto">Punto de Recogida:</label>
             <select id="punto" name="punto" required>
@@ -81,5 +83,4 @@
     </script>
 </body>
 </html>
-
 
