--- a/catalogo.html
+++ b/catalogo.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="//code.tidio.co/4rnxtwmgpuhorighgn5rt8bf5swduvnm.js" async></script>
     <title>Catálogo</title>
     <link rel="stylesheet" href="styles.css">
     <style>
