--- a/recogida.html
+++ b/recogida.html
@@ -21,6 +21,12 @@
         #map {
             margin-top: 600px; /* Ajusta el margen superior según sea necesario */
         }
+
+        /* Estilo para el aviso de envío */
+        #avisoEnvio {
+            font-style: italic;
+            margin-top: 20px;
+        }
     </style>
 </head>
 <body>
@@ -56,8 +62,7 @@
             
             <button type="submit">Enviar</button>
         </form>
+        <div id="avisoEnvio">Al darle al enviar, tardará entre 1 y 2 minutos en enviarse. ¡Por favor, ten paciencia!</div>
     </div>
 </body>
 </html>
-
-
