--- a/recogida.html
+++ b/recogida.html
@@ -25,7 +25,7 @@
         /* Estilo para el aviso de envío */
         #avisoEnvio {
             font-style: italic;
-            margin-top: 20px;
+            margin-top: 100px;
         }
     </style>
 </head>
@@ -62,7 +62,7 @@
             
             <button type="submit">Enviar</button>
         </form>
-        <div id="avisoEnvio">Al darle al enviar, tardará entre 1 y 2 minutos en enviarse. ¡Por favor, ten paciencia!</div>
+        <div id="avisoEnvio">Al darle al enviar, tardará entre 1 minutos en enviarse. ¡Por favor, ten paciencia!</div>
     </div>
 </body>
 </html>
