--- a/recogida.html
+++ b/recogida.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+    <script src="//code.tidio.co/4rnxtwmgpuhorighgn5rt8bf5swduvnm.js" async></script>
     <script src="map.js"></script>
    
     <style>
