--- a/catalogo.html
+++ b/catalogo.html
@@ -189,7 +189,7 @@
     </div>
 
     <script>
-        const imagenesProducto1 = ["vape.jpg"];
+        const imagenesProducto1 = ["vape.jpg", "azul.jpg", "melocoton.jpg", "morado.jpg", "verde.jpg"];
         const imagenesProducto2 = ["negro.jpg", "neon.jpg", "azul.jpg","amarillo morado.jpg", "gris.jpg"];
         let indiceProducto1 = 0;
         let indiceProducto2 = 0;
