--- a/catalogo.html
+++ b/catalogo.html
@@ -135,6 +135,9 @@
                     <option value="Grape ice">Grape ice <span class="en-stock">(En stock)</span></option>
                     <option value="Mixted fruits">Mixted fruits <span class="en-stock">(En stock)</span></option>
                     <option value="Menta">Menta <span class="en-stock">(En stock)</span></option>
+                     <option value="Mixted fruits">Strawberry Lychee <span class="en-stock">(En stock)</span></option>
+                     <option value="Mixted fruits">Strawberry Kiwi <span class="en-stock">(En stock)</span></option>
+                     <option value="Mixted fruits">Mango Peach Watermelon <span class="en-stock">(En stock)</span></option>
                 </select>
             </div>
             <div>
@@ -190,7 +193,7 @@
 
     <script>
         const imagenesProducto1 = ["vape.jpg", "azul.jpg", "melocoton.jpg", "morado.jpg", "verde.jpg"];
-        const imagenesProducto2 = ["negro.jpg", "neon.jpg", "azul.jpg","amarillo morado.jpg", "gris.jpg"];
+        const imagenesProducto2 = ["negro.jpg", "neon.jpg", "","amarillo morado.jpg", "gris.jpg"];
         let indiceProducto1 = 0;
         let indiceProducto2 = 0;
 
