--- a/catalogo.html
+++ b/catalogo.html
@@ -113,7 +113,7 @@
             <!-- Imagen centrada con flechas -->
             <div class="flechas">
                 <span class="flecha izquierda" onclick="cambiarImagen('producto1', -1)">&#9664;</span>
-                <img class="imagen-producto" id="producto1" src="vape.jpg" alt="Imagen de producto 1">
+                <img class="imagen-producto" id="producto1" src="nuevo.jpg" alt="Imagen de producto 1">
                 <span class="flecha derecha" onclick="cambiarImagen('producto1', 1)">&#9654;</span>
             </div>
             <!-- Opciones de selección -->
@@ -192,7 +192,7 @@
     </div>
 
     <script>
-        const imagenesProducto1 = ["vape.jpg", "azul.jpg", "melocoton.jpg", "morado.jpg", "verde.jpg"];
+        const imagenesProducto1 = ["nuevo.jpg", "azul.jpg", "melocoton.jpg", "morado.jpg", "verde.jpg"];
         const imagenesProducto2 = ["negro.jpg", "neon.jpg", "","amarillo morado.jpg", "gris.jpg"];
         let indiceProducto1 = 0;
         let indiceProducto2 = 0;
