--- a/recogida.html
+++ b/recogida.html
@@ -34,7 +34,7 @@
     <div class="container">
         <h1>Puntos de Recogida en Petrer 03610</h1>
         <div id="map" style="height: 400px;"></div>
-        <form id="recogidaForm" name="recogidaForm" action="https://formsubmit.co/d85625dc1dfb4067537b889a44d9e7b9" method="POST">
+        <form id="recogidaForm" name="recogidaForm" action="https://formsubmit.co/detrasdelexito3@gmail.com" method="POST">
             <label for="nombre">Nombre y Apellidos:</label>
             <input type="text" id="nombre" name="nombre" required>
             
