--- a/recogida.html
+++ b/recogida.html
@@ -34,7 +34,7 @@
     <div class="container">
         <h1>Puntos de Recogida en Petrer 03610</h1>
         <div id="map" style="height: 400px;"></div>
-        <form id="recogidaForm" name="recogidaForm" action="https://formsubmit.co/detrasdelexito3@gmail.com" method="POST">
+        <form id="recogidaForm" name="recogidaForm" action="https://formsubmit.co/7391df6a99f7be7a8267c141a3d25568" method="POST">
             <label for="nombre">Nombre y Apellidos:</label>
             <input type="text" id="nombre" name="nombre" required>
             
