--- a/catalogo.html
+++ b/catalogo.html
@@ -102,9 +102,29 @@
         .flechas .flecha.derecha {
             right: 0;
         }
+        /* Estilo para el botón de inicio */
+        .boton-inicio {
+            position: absolute;
+            top: 10px;
+            left: 10px;
+        }
+        .boton-inicio a {
+            padding: 10px 20px;
+            background-color: #007bff;
+            color: #fff;
+            text-decoration: none;
+            border-radius: 5px;
+            font-size: 16px;
+        }
+        .boton-inicio a:hover {
+            background-color: #0056b3;
+        }
     </style>
 </head>
 <body>
+    <div class="boton-inicio">
+        <a href="index.html">Inicio</a>
+    </div>
     <div class="container">
         <h1>Catálogo de Productos</h1>
         <!-- Primer Producto -->
