--- a/catalogo.html
+++ b/catalogo.html
@@ -78,7 +78,7 @@
         }
         /* Margen adicional para el primer producto */
         .producto:first-of-type {
-            margin-top: 1500px;
+            margin-top: 1000px;
         }
         /* Estilo para las flechas de navegación */
         .flechas {
@@ -226,9 +226,15 @@
             <div>
                 <label for="sabor3">Sabor:</label>
                 <select id="sabor3" name="sabor3">
-                    <option value="Sabor 1">Sabor 1 <span class="en-stock">(En stock)</span></option>
-                    <option value="Sabor 2">Sabor 2 <span class="en-stock">(En stock)</span></option>
-                    <option value="Sabor 3">Sabor 3 <span class="en-stock">(En stock)</span></option>
+                    <option value="Sabor 1">Grape Ice <span class="en-stock">(En stock)</span></option>
+                    <option value="Sabor 2">Mix Fruit <span class="en-stock">(En stock)</span></option>
+                    <option value="Sabor 3">Blueberry Mint <span class="en-stock">(En stock)</span></option>
+                    <option value="Sabor 4">Blueberry Raspberry <span class="en-stock">(En stock)</span></option>
+                    <option value="Sabor 5">Strawberry Ice <span class="en-stock">(En stock)</span></option>
+                    <option value="Sabor 6">Strawberry Kiwi<span class="en-stock">(En stock)</span></option>
+                    <option value="Sabor 7">Watermelon Bubble Gum <span class="en-stock">(En stock)</span></option>
+                    <option value="Sabor 8">Watermelon Ice <span class="en-stock">(En stock)</span></option>
+                    <option value="Sabor 9">Strawberry Watermelon <span class="en-stock">(En stock)</span></option>
                 </select>
             </div>
             <div>
